# RetireeLifePricing

./: README.md  app.py  pyproject.toml
data/soa_exports/: soa_table_3135.csv  soa_table_3136.csv  soa_table_3373.csv  soa_table_3374.csv  soa_table_3385.csv  soa_table_3386.csv  soa_table_3481.csv  soa_table_3482.csv  soa_table_3531.csv  soa_table_3532.csv  soa_table_3533.csv  soa_table_3534.csv  soa_table_3535.csv  soa_table_3536.csv  soa_table_3537.csv  soa_table_3538.csv  soa_table_3539.csv  soa_table_3540.csv  soa_table_3541.csv  soa_table_3542.csv  soa_table_3543.csv  soa_table_3544.csv  soa_table_3545.csv  soa_table_3546.csv  soa_table_3547.csv  soa_table_3548.csv  soa_table_3549.csv  soa_table_3550.csv  soa_table_3551.csv  soa_table_3552.csv  soa_table_3553.csv  soa_table_3554.csv  soa_table_3555.csv  soa_table_3556.csv  soa_table_3557.csv  soa_table_3558.csv  soa_table_3559.csv  soa_table_3560.csv  soa_table_3561.csv  soa_table_3562.csv  (+46 more)
retiree_life_pricer/: soa.py
scripts/: cache_soa_tables.py
tests/: test_soa.py
